	PR target/10700 	* fold-const.c (extract_muldiv_1): There's nothing that can be done 	if the expression is a SAVE_EXPR.

* gcc.c-torture/compile/20030703-1.c: New test case.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@68877 138bc75d-0d04-0410-961f-82ee72b054a4